ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
    - host: "ab645c5523359410b861469802d82a0c-f6393e02b0ecc2f2.elb.eu-north-1.amazonaws.com"
      http:
        paths:
        - path: /opt/apache-tomcat-8.5.98/webapps/
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
